# Schema-Aware-SQL-Generation

./: .gitignore  README.md  lms.db
design/: .$Untitled Diagram.drawio.bkp  Untitled Diagram.drawio
dev/: gemini_tool_call.ipynb  lab.ipynb  pyproject.toml  qa.ipynb  semantic_layer.ipynb
dev/data/: prompt.md  qa.json  sales.json
lab/: data.ipynb  db.db  lstm.ipynb  lstm_demand_model.h5  pyproject.toml  schema.sql
lab/chat/: data.ipynb  gemma3.ipynb
lab/data/: GLS_PST_AI_VW.parquet  GNR_EMP_AI_VW.parquet  INV_V_ITM_MOVMNT_AI.parquet  MRP_WORK_ORDER_AI_VW.parquet  PURCHS_BILL_DTL_AI_VW.parquet  PURCHS_BILL_MST_AI_VW.parquet  SALES_BILL_DTL_AI_VW.parquet  SALES_BILL_MST_AI_VW.parquet  SALES_RT_BILL_DTL_AI_VW.parquet  (+1 more)
notebooks/: data.ipynb  gemma3.ipynb  smollm.ipynb
server/: main.py  pyproject.toml
server/agents/: __init__.py  generator.py  identifier.py  identify_agent.py  interface.py  respond_agent.py  sql_agent.py  sql_execute_node.py
server/core/: config.py  enums.py  schemas.py
server/core/enums/: __init__.py  agent.py
server/core/schemas/: __init__.py  db_info.py  struct_output.py
server/graph/: helpers.py  routers.py  state.py  workflow.py
server/store/nlp/: factory.py  interface.py
server/store/nlp/providers/: __init__.py  gemini.py
server/store/prompts/: factory.py
server/store/prompts/md/: chat.md  chunk.md  history.md  ocr.md  queries.md  semantic.md  system_fix_sql.md  system_identifier.md  system_respond.md  system_sql.md
server/tools/: database_info.py  depth.py  execute.py  overview.py  tables_info.py
