[project]
name = "dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.2.1",
    "cohere>=5.20.0",
    "google-generativeai>=0.8.5",
    "ipywidgets>=8.1.7",
    "langgraph>=1.0.1",
    "pydantic-settings>=2.11.0",
]
