[project]
name = "sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-generativeai>=0.8.5",
    "langchain>=1.0.1",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.1",
    "pydantic-settings>=2.11.0",
    "torch>=2.9.0",
]
